# tun2socks

./: .clang-format  .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/tun2socks/: connection.h  core.h  parameter.h  platform.h  proxy_policy.h  tun2socks.h
lib/lwip/: CMakeLists.txt
lib/lwip/src/: Filelists.cmake
lib/lwip/src/core/: mem.c  netif.cpp  pbuf.c  pbuf.cpp  sys_arch.cpp  tcp.c  tcp.cpp  tcp_in.c  tcp_in.cpp  tcp_out.c  tcp_out.cpp  timeouts.cpp  udp.c  udp.cpp
lib/lwip/src/core/ipv4/: icmp.c  icmp.cpp  ip4.c  ip4.cpp  ip4_frag.c  ip4_frag.cpp
lib/lwip/src/core/ipv6/: ip6.c  ip6.cpp  nd6.cpp
lib/lwip/src/include/arch/: cc.h  sys_arch.h
lib/lwip/src/include/lwip/: arch.h  debug.h  lwipopts.h  netif.h  opt.h  tcp.h  udp.h
lib/lwip/src/include/lwip/priv/: tcp_priv.h
lib/lwip/src/netif/: slipif.cpp
lib/src/: adapters.hpp  address_pair.hpp  basic_connection.hpp  basic_proxy.hpp  basic_tuntap.hpp  buffer.hpp  checksum.hpp  core.cpp  core_impl.hpp  core_impl_api.h  deleter.hh  endpoint_pair.hpp  interface.hpp  ip_layer_stack.hpp  ip_packet.hpp  local_port_pid.hpp  lwip.hpp  lwipstack.h  misc.hpp  network_monitor.hpp  packet-util.hh  packet.hh  pbuf.hpp  platform.hpp  proxy_policy.hpp  proxy_policy_impl.hpp  tcp.hh  tcp_packet.hpp  tcp_proxy.hpp  tcp_proxy_ex.hpp  tcp_stream.hpp  temporary_buffer.hh  thread.hpp  tun2socks.cpp  tun2socks_impl.hpp  tun_device.cpp  tun_device.h  tun_service_mac.hpp  tuntap.hpp  udp_packet.hpp  (+6 more)
lib/src/net/: address_pair.hpp  checksum.hpp  endpoint_pair.hpp  ip.hpp  packet-util.hh  tcp.hh  tcp.hpp  udp.hpp
lib/src/process_info/: process_info.hpp  process_info_linux.hpp  process_info_mac.hpp  process_info_win32.hpp
lib/src/route/: route.hpp  route_linux.hpp  route_mac.hpp  route_win32.hpp
lib/src/socks_client/: socks_client.hpp  socks_enums.hpp  socks_error_code.hpp  socks_io.hpp
lib/src/tuntap/: basic_tuntap.hpp  buffer.h  tun_service_linux.hpp  tun_service_mac.hpp  tuntap.hpp  wintun.h  wintun_library.hpp  wintun_service.hpp
tun2socks/: CMakeLists.txt  main.cpp
